--- a/Stocks sentiment analysis/README
+++ b/Stocks sentiment analysis/README
@@ -1,1 +1,2 @@
-
+please use the following query on a command prompt after unzipping "datasets" to show the app :
+bokeh serve --show data_viz_app.py
